# ATS-Postiats

./: .gitignore  .travis.yml  AUTHORS  CHANGES-ats2  CHANGES-ats2.txt  CHANGES-contrib  CHANGES-contrib.txt  COPYING  INSTALL  Makefile_atslib  Makefile_codegen_atsctrb  Makefile_codegen_atslib  Makefile_devl  NOTES  README  README.md  VERSION  VERSION-contrib.txt  VERSION.txt  appveyor.yml  config.h  config.mk.in  configure.ac  contrib  flake.nix  makeall.sh  patscc_env.sh.in  patsopt_env.sh.in
appveyor/: appveyor.yml  build.mk
atscntrb/atscntrb-hx-cstream/: package.json
atscntrb/atscntrb-hx-intinf/: package.json
atscntrb/atscntrb-hx-mytesting/: README
atscntrb/atscntrb-intinf-hwxi/: package.json
atscntrb/atscntrb-libcurl/: package.json
atscntrb/atscntrb-libgmp/: package.json
atscntrb/atscntrb-libpcre/: package.json
ccomp/atslib/: Makefile  Makefile.atxt  Makefile.gen
ccomp/runtime/: pats_basics.h  pats_ccomp_basics.h  pats_ccomp_config.h  pats_ccomp_exception.h  pats_ccomp_instrset.h  pats_ccomp_memalloc.h  pats_ccomp_memalloc_gcbdw.h  pats_ccomp_memalloc_libc.h  pats_ccomp_memalloc_user.h  pats_ccomp_memalloc_user2.h  pats_ccomp_memalloca.h  pats_ccomp_runtime.c  pats_ccomp_runtime.h  pats_ccomp_runtime2.dats  pats_ccomp_runtime2_dats.c  pats_ccomp_runtime_exn.c  pats_ccomp_runtime_memalloc.c  pats_ccomp_runtime_trywith.c  pats_ccomp_trywith.h  pats_ccomp_typedefs.h  pats_memalloc.h  pats_typedefs.h
codegen/: Makefile.gen  Makefile_atscntrb  Makefile_atsctrb  Makefile_atslib
contrib/: README
contrib-tmp/libats-bbarker/: .TODO
contrib/ATS-extsolve/: Makefile  README  package.json  patsolve_cnstrnt.dats  patsolve_commarg.dats  patsolve_main.dats  patsolve_parsing.dats
contrib/ATS-extsolve-smt2/: Makefile  README
contrib/ATS-extsolve-z3/: ATS-extsolve  Makefile  README
contrib/CATS-atscc2clj/: Makefile
contrib/CATS-atscc2erl/: Makefile
contrib/CATS-atscc2js/: Makefile  atscc2js_emit.dats  atscc2js_emit2.dats  atscc2js_main.dats  libatscc2js_ext.dats  libatscc2js_ext.sats
contrib/CATS-atscc2php/: Makefile
contrib/CATS-atscc2pl/: Makefile
contrib/CATS-atscc2py3/: Makefile  README
contrib/ats2cpp/: H
doc/: Makefile  Makefile_test
docugen/: Makefile_atslib
libatsyn2json/: Makefile  dynloadall.dats
libatsynmark/: Makefile  dynloadall.dats
libatsyntax/: Makefile  dynloadall.dats
mingw/: .gitignore  Makefile  README.md  fnmatch.h
nix/: README.md  build.nix  default.nix  path_hack.sh  shell.nix  tarball.nix
npm-utils/: README
prelude/: basics_dyn.sats  basics_gen.sats  basics_pre.sats  basics_sta.sats  codegen.sats  codegen2.sats  fixity.ats  lmacrodef.hats  lmacrodef.sats  macrodef.sats  params.hats
share/: Makefile.gen  atscntrb_reloc.hats  atsmake-port-post.mk  atsmake-port-pre.mk  atsmake-post.mk  atsmake-pre.mk  atsmake2-post.mk  atsmake2-pre.mk  atspre_define.hats  atspre_define_pkgreloc.hats  atspre_staload.hats  atspre_staload_libats_ML.dats  atspre_staload_libats_ML.hats  atspre_staload_tmpdef.hats  dbookgendecl.atxt  dbookgendecl.dats  dbookgendecl.sats  declatext.dats  declatext.sats  htmlgendecl.atxt  htmlgendecl.dats  htmlgendecl.sats
src/: CMakeLists.txt  Makefile  Makefile.atxt  Makefile.bak  Makefile.gen  Makefile_CBOOT  Makefile_CBOOTgmp  Makefile_CBOOTint  Makefile_CBOOTmin  Makefile_test  README  abcde.dats  pats_atspre.dats  pats_basics.dats  pats_basics.hats  pats_basics.sats  pats_ccomp.dats  pats_ccomp.sats  pats_ccomp_caseof.dats  pats_ccomp_ccompenv.dats  pats_ccomp_claulst.dats  pats_ccomp_d2env.dats  pats_ccomp_decl.dats  pats_ccomp_dynexp.dats  pats_ccomp_emit.dats  pats_ccomp_emit2.dats  pats_ccomp_emit3.dats  pats_ccomp_environ.dats  pats_ccomp_funent.dats  pats_ccomp_funlab.dats  pats_ccomp_hipat.dats  pats_ccomp_hitype.dats  pats_ccomp_instrseq.dats  pats_ccomp_lazyeval.dats  pats_ccomp_loop.dats  pats_ccomp_looping.dats  pats_ccomp_main.dats  pats_ccomp_print.dats  pats_ccomp_subst.dats  pats_ccomp_tailcal.dats  (+275 more)
src/CBOOT/: Makefile  README  gcats1_all.cats
src/CBOOT/JS/: Makefile
src/CBOOT/JS/libatsopt-prelude/: prelude
src/CBOOT/ccomp/runtime/: ats_basics.h  ats_config.h  ats_exception.h  ats_memory.h  ats_prelude.c  ats_prelude_gcbdw.c  ats_prelude_ngc.c  ats_types.h
src/CBOOT/ccomp/runtime/GCATS/: gcats1.cats  gcats1_autops_dats.c  gcats1_chunk_dats.c  gcats1_globalentry_dats.c  gcats1_marking_dats.c  gcats1_master.hats  gcats1_misc_dats.c  gcats1_top_dats.c
src/CBOOT/ccomp/runtime/GCATS/m32/: gcats1_autops_dats.c  gcats1_chunk_dats.c  gcats1_collecting_dats.c  gcats1_freeitmlst_dats.c  gcats1_globalentry_dats.c  gcats1_manops_dats.c  gcats1_marking_dats.c  gcats1_misc_dats.c  gcats1_top_dats.c
src/CBOOT/ccomp/runtime/GCATS/m64/: gcats1_autops_dats.c  gcats1_chunk_dats.c  gcats1_collecting_dats.c  gcats1_freeitmlst_dats.c  gcats1_globalentry_dats.c  gcats1_manops_dats.c  gcats1_marking_dats.c  gcats1_misc_dats.c  gcats1_top_dats.c
src/CBOOT/libats/: Makefile
src/CBOOT/libats/CATS/: hashtable_chain.cats  linqueue_arr.cats  linqueue_lst.cats
src/CBOOT/libats/ngc/CATS/: deque_arr.cats
src/CBOOT/libc/: Makefile
src/CBOOT/libc/CATS/: errno.cats  fcntl.cats  gmp.cats  stdarg.cats  stdio.cats  stdlib.cats  string.cats  time.cats  unistd.cats
src/CBOOT/libc/sys/CATS/: stat.cats  types.cats  wait.cats
src/CBOOT/prelude/: Makefile
src/CBOOT/prelude/CATS/: array.cats  basics.cats  bool.cats  byte.cats  char.cats  float.cats  integer.cats  integer_fixed.cats  integer_ptr.cats  lazy.cats  lazy_vt.cats  list.cats  matrix.cats  option.cats  pointer.cats  printf.cats  reference.cats  sizetype.cats  string.cats
src/CBOOTmin/: Makefile  README  ccomp  libats  libc  prelude
src/CMKBLD/: .gitignore
src/runtime/: ats_prelude.c  ats_prelude_gcats.c  ats_prelude_gcbdw.c
travis-ci/: Dockerfile  ats1_setup.sh  build_docker.sh  install-ats1.sh  install-macports-gcc.sh  install-pkgs.sh  install_ats1.sh  install_ats2.sh  install_backends.sh  install_contrib.sh  install_emscripten.sh  install_osx.sh  install_utilities.sh  installpkg.sh  setup.sh  test_regress.sh  travis.yml
(+6766 files in other folders)
